--- a/index.css
+++ b/index.css
@@ -72,7 +72,7 @@ header a{
 } 
 
 header a:hover{
-    color: rgb(211, 14, 14);
+    color: rgb(161, 19, 19);
 }
 
 #hero{
@@ -107,18 +107,6 @@ header a:hover{
   text-align: center;
   padding: 200px 10px;
 
-}
-
-img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transition: transform 0.5s;
-    border-radius: 12px;
-} 
-
-img:hover{
-    transform: scale(1.1);
 }
 
 #Our-programs{
@@ -195,7 +183,7 @@ img:hover{
     align-items: center;
     background-color: rgb(38, 37, 37);
     color: white;
-    height: 50vh;
+    height: 60vh;
 }
 
 #end h2{
@@ -243,7 +231,8 @@ footer .container{
     
     #Somos-ProNow .container{
        display: flex; 
-       justify-content: space-evenly;
+       justify-content: space-around;
+       padding: 150px 0px;
     }
 
     #Somos-ProNow .texto{
@@ -262,7 +251,24 @@ footer .container{
     
     #Somos-ProNow .img-container{
         height: 500px;
-        width: 400px; 
+        width: 400px;
+        background-image: linear-gradient(
+         0deg,
+        rgba(0,0,0,0.5), rgba(0,0,0,0.5)
+        ), url("https://i.blogs.es/a2066e/programando/1366_2000.jpg");
+        background-position: center center;
+        background-size: cover;
+        width: 400px;
+    }
+    
+    .img-container{
+        object-fit: cover;
+        transition: transform 0.3s;
+        border-radius: 12px;
+    } 
+    
+    .img-container:hover{
+        transform: scale(1.1);
     }
 
     #Our-programs .programs{
@@ -286,11 +292,14 @@ footer .container{
     #feutures ul{
         margin-left: 100px;
     }
-
+    
+    #end{
+        height: 600px;
+    }
 }
 
 @media (min-width: 1200px) {
-    #caracteristicas{
+    #features{
         background-position-x: calc(100vw - 800px);
     }
 }
